--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "build": "tsc",
     "watch": "tsc -w",
     "prestart": "npm run build",
@@ -15,6 +17,10 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "eslint": "^9.29.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "nodemon": "^3.1.10",
     "typescript": "^5.8.3"
   },
