--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/ioredis": "^4.28.10",
+    "bullmq": "^5.55.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "ioredis": "^5.6.1"
   }
 }
