--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@bull-board/express": "^6.10.1",
     "@bull-board/ui": "^6.10.1",
     "@types/ioredis": "^4.28.10",
+    "body-parser": "^2.2.0",
     "bullmq": "^5.55.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "ioredis": "^5.6.1"
+    "ioredis": "^5.6.1",
+    "zod": "^3.25.67"
   }
 }
